<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>object_sorting_plansys2</name>
  <version>0.0.0</version>
  <description>A demo to do object sorting tasks by plansys2</description>
  <maintainer email="yanchuang1122@gmail.com">celltower1</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>plansys2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>plansys2_domain_expert</depend>
  <depend>plansys2_executor</depend>
  <depend>plansys2_planner</depend>
  <depend>plansys2_problem_expert</depend>
  <depend>plansys2_pddl_parser</depend>

  <depend>moveit_action_interfaces</depend>
  <depend>gripper_action_interface</depend>

  <exec_depend>plansys2_bringup</exec_depend>
  <exec_depend>plansys2_terminal</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
